# geofractal

./: LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
ai_helpers/: claude_huggingface_dataset_helpers.txt  v101_claude_helpers.txt  v101_claude_helpers_fusion_helper.txt
docs/: ROUTER_PACKAGE_ANALYSIS.md
src/geofractal/: resnet_macbook.py  train_base.py  train_classifier.py  train_epoch.py
src/geofractal/config/: config_train_epoch.py  david_config.py
src/geofractal/dataset_synth/: chaos_generator.py
src/geofractal/function/: cantor_gelu_triton.py  fractal_regularizer.py  fractal_similarity.py
src/geofractal/losses/: cantor.py  cayley_menger.py  geometric_coalescence_loss.py  loss_base.py
src/geofractal/model/: experiment_geometric_basin.py
src/geofractal/model/blocks/: cantor_transformer.py  cantor_transformer_validation.py  geometric_basin.py
src/geofractal/model/core/: david.py  david_clip_collective.py  david_collective.py  david_diffusion.py  flow_classification.py  flow_classification_profiler.py  vit_beatrix.py  vit_zana.py
src/geofractal/model/david-beans/: david_beans.py
src/geofractal/model/david_beans/: model.py  model_v2.py
src/geofractal/model/diffusion/: simple_diffusion.py  simple_diffusion_trainer.py
src/geofractal/model/encoder/: cantor_resnet.py
src/geofractal/model/gate/: alucard.py
src/geofractal/model/layers/: conv.py  ksimplex_linear.py  linear.py  linearv2_untested.py
src/geofractal/model/positional/: cantor.py
src/geofractal/model/relational/: cantor_relational.py
src/geofractal/model/vae/: cantor_topological_vae.py  lyra_loader.py  probe_vae_lyra.py  vae_lyra_v2.py
src/geofractal/router/: GETTING_STARTED.md  QUICK_BUILD.md  README.md  WIDE_ROUTER_GUIDE.md  __init__.py  base.py  base_collective.py  base_component.py  base_port.py  base_router.py  base_tower.py  base_utility.py  benchmark_router.py  collective.py  config.py  core.py  global_fractal_router_benchmark.py  registry.py  run_tst_builder.py  run_tst_full.py  run_tst_full_collective.py  run_tst_gradients.py  run_tst_head_builder.py  run_tst_seq.py  wide_router.py
src/geofractal/router/compiler/: __init__.py  compile_benchmark.py  compile_collective_benchmark.py  compile_router.py
src/geofractal/router/components/: address_component.py  aggregation_component.py  aux_component.py  beatrix_rope_test.py  cantor_address_component.py  cantor_euclidean_attention_component.py  cantor_pure_component.py  data_component.py  embedding_component.py  encoder_data_component.py  fusion_component.py  lens_component.py  projection_component.py  rope_component.py  rope_eval.py  torch_component.py  transformer_component.py  walker_component.py  wormhole_attention_component.py
src/geofractal/router/deprecated/: trainable.py
src/geofractal/router/factory/: __init__.py  builder.py  factory_builder.py  factory_protocols.py  protocols.py  prototype.py  registry.py
src/geofractal/router/fusion/: __init__.py  builder.py  fusion_builder.py  methods.py
src/geofractal/router/getting_started/: ARCHITECTURE.md  DEVELOPMENT.md  INDEX.md  INIT_BREAKDOWN.md  PROTOCOL.md
src/geofractal/router/head/: __init__.py  builder.py  (+3 more)
src/geofractal/router_depr/: __init__.py  collective.py  config.py  run_tst_head_builder.py
studies/: InceptionFusionTowerResearch-12_23_25.ipynb  Router_Transfer_Learning-12_19_25.ipynb  WalkerFusionConsistencyBaselineAblations-12_24_25.ipynb
(+81 files in other folders)
