[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geofractal"
version = "1.0.2"
description = "multimodal, geometric, fractal, geofractal, audio, visual, classification, predictive, and symbiosis-based models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "AbstractPhil", email = "abstractpowered@outlook.com" }]
keywords = ["fractal", "geometry", "multimodal", "multi-modal", "geofractal", "nlp", "symbolic", "embeddings", "simplex", "ksimplex"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy>=1.23",
  "datasets>=2.15",
  "torch>=2.1",
  "geometricvocab @ git+https://github.com/AbstractEyes/lattice_vocabulary.git",
]

[project.urls]
Homepage = "https://huggingface.co/AbstractPowered"
Repository = "https://github.com/AbstractEyes/geofractal"
Issues = "https://github.com/AbstractEyes/geofractal/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["geofractal*", "geovocab2*"]