[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geofractal"
version = "1.2.0"
description = "multimodal, geometric, fractal, geofractal, audio, visual, classification, predictive, and symbiosis-based models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "AbstractPhil", email = "abstractpowered@outlook.com" }]
keywords = ["fractal", "geometry", "multimodal", "multi-modal", "geofractal", "nlp", "symbolic", "embeddings", "simplex", "ksimplex"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy>=1.23",
  "datasets>=2.15",
  "torch>=2.1",
  "geometricvocab @ git+https://github.com/AbstractEyes/lattice_vocabulary.git",
  "wide_compiler @ git+https://github.com/AbstractEyes/pytorch-parallel-compiler.git",
]

[project.optional-dependencies]
# Backend extras — default install is PyTorch.
# These are reserved for future standalone backend modules.
# Installing them now is valid but they do not yet house
# the backend-specific structures (those are still in-tree).
numpy = ["numpy>=1.23"]
tensorflow = ["tensorflow>=2.12"]

hub = ["huggingface_hub", "safetensors"]
train = ["PyYAML>=6.0"]
all = [
  "huggingface_hub",
  "safetensors",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://huggingface.co/AbstractPowered"
Repository = "https://github.com/AbstractEyes/geofractal"
Issues = "https://github.com/AbstractEyes/geofractal/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["geofractal*", "geovocab2*"]